--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <div class="project-slider-container">
   <div class="project-slider">
-    <img src="projek1.jpg" alt="Project 1">
-    <img src="projek2.jpg" alt="Project 2">
+    <img src="Projek1.jpg" alt="Project 1">
+    <img src="Projek2.jpg" alt="Project 2">
     </div>
 </div>
 
