--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <img src="Projek1.jpg" alt="Project 1">
     <img src="Projek2.jpg" alt="Project 2">
     </div>
+        <button class="slide-btn" onclick="scrollToNextSlide()">Slide Foto</button>
+        
 </div>
 
     <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
