--- a/index.html
+++ b/index.html
@@ -56,19 +56,17 @@
     <img src="Projek2.jpg" alt="Project 2">
     </div>
         <button class="slide-btn" onclick="scrollToNextSlide()">Slide Foto</button>
-        <script>
+
+<script>
   function scrollToNextSlide() {
-    const slider = document.querySelector('.slide-container');
+    const slider = document.querySelector('.project-slider-container');
     slider.scrollBy({
       left: window.innerWidth, // Geser satu layar penuh
       behavior: 'smooth'
     });
   }
-        </script>
-        
-        
-</div>
-
+</script>
+    </div>
     <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
 </section>
 
