--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
     <img src="Projek2.jpg" alt="Project 2">
     </div>
         <button class="slide-btn" onclick="scrollToNextSlide()">Slide Foto</button>
-
 <script>
-  function scrollToNextSlide() {
-    const slider = document.querySelector('.project-slider-container');
-    slider.scrollBy({
-      left: window.innerWidth, // Geser satu layar penuh
-      behavior: 'smooth'
-    });
-  }
-</script>
+function scrollToNextSlide() {
+  const slider = document.querySelector('.project-slider');
+  slider.scrollBy({
+    left: window.innerWidth,  // Geser satu layar penuh
+    behavior: 'smooth'
+  });
+}
+<script>
     <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
 </section>
 
