--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ function scrollRight() {
 
     <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
 </section>
-
+        
+<div>
     </section>
        <section id="contact">
     <h2>Contact Me</h2>
