--- a/index.html
+++ b/index.html
@@ -45,36 +45,43 @@
        </p>
   </div>
 </section>
-   <section id="projects">
-    <h2>Projects</h2>
-    <h4>Editing Video Menggunakan Alight Motion & CapCut</h4>
-    <p>Saya memiliki kemampuan dalam mengedit video menggunakan aplikasi <b>Alight Motion</b> dan <b>CapCut</b>, mulai dari efek <i>jedag-jedug</i>, <i>typography</i>, hingga <i>AMV</i> (Anime Music Video).</p>
+<section id="projects">
+  <h2>Projects</h2>
+  <h4>Editing Video Menggunakan Alight Motion & CapCut</h4>
+  <p>Saya memiliki kemampuan dalam mengedit video menggunakan aplikasi <b>Alight Motion</b> dan <b>CapCut</b>, mulai dari efek <i>jedag-jedug</i>, <i>typography</i>, hingga <i>AMV</i> (Anime Music Video).</p>
 
-    <div class="slider-wrapper">
-  <button class="arrow left" onclick="scrollLeft()">&#60;</button>
-  <div class="project-slider">
-    <img src="Projek1.jpg" alt="Project 1">
-    <img src="Projek2.jpg" alt="Project 2">
+  <div class="slider-wrapper">
+    <button class="arrow left" onclick="scrollLeft()">&#60;</button>
+
+    <div class="project-slider-container">
+      <div class="project-slider">
+        <img src="Projek1.jpg" alt="Project 1">
+        <img src="Projek2.jpg" alt="Project 2">
+      </div>
     </div>
-        
-<script>
-function scrollLeft() {
-  document.querySelector('.project-slider-container').scrollBy({
-    left: -300,
-    behavior: 'smooth'
-  });
-}
 
-function scrollRight() {
-  document.querySelector('.project-slider-container').scrollBy({
-    left: 300,
-    behavior: 'smooth'
-  });
-}
+    <button class="arrow right" onclick="scrollRight()">&#62;</button>
+  </div>
+
+  <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
+</section>
+
+<script>
+  function scrollLeft() {
+    document.querySelector('.project-slider-container').scrollBy({
+      left: -300,
+      behavior: 'smooth'
+    });
+  }
+
+  function scrollRight() {
+    document.querySelector('.project-slider-container').scrollBy({
+      left: 300,
+      behavior: 'smooth'
+    });
+  }
 </script>
 
-    <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
-</section>
         
 <div>
     </section>
