--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
   <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
 </section>
 
+</section> <!-- Ini menutup section projects dengan benar -->
+
 <script>
   function scrollLeft() {
     document.querySelector('.project-slider-container').scrollBy({
@@ -81,9 +83,7 @@
     });
   }
 </script>
-        
 
-<div>
     </section>
        <section id="contact">
     <h2>Contact Me</h2>
