--- a/index.html
+++ b/index.html
@@ -66,24 +66,6 @@
   <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
 </section>
 
-</section> <!-- Ini menutup section projects dengan benar -->
-
-<script>
-  function scrollLeft() {
-    document.querySelector('.project-slider-container').scrollBy({
-      left: -300,
-      behavior: 'smooth'
-    });
-  }
-
-  function scrollRight() {
-    document.querySelector('.project-slider-container').scrollBy({
-      left: 300,
-      behavior: 'smooth'
-    });
-  }
-</script>
-
     </section>
        <section id="contact">
     <h2>Contact Me</h2>
@@ -113,5 +95,51 @@
     <footer>
         <p>2025 - Tugas PJJ Progdas</p>
     </footer>
+      <p><b>Catatan:</b> Saat ini aktivitas editing sedang dihentikan sementara karena keterbatasan perangkat.</p>
+</section>
+
+<section id="contact">
+  <h2>Contact Me</h2>
+  <div class="contact-icons">
+    <a href="https://wa.me/6285933641078" target="_blank" class="icon whatsapp" title="WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://instagram.com/ramzzxd17" target="_blank" class="icon instagram" title="Instagram">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://discord.com/users/ramzz_xd1" target="_blank" class="icon discord" title="Discord">
+      <i class="fab fa-discord"></i>
+    </a>
+    <a href="mailto:spongebobcool4@gmail.com" class="icon email" title="Email">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://youtube.com/@RamzzAbsurdHumor" target="_blank" class="icon youtube" title="YouTube">
+      <i class="fab fa-youtube"></i>
+    </a>
+  </div>
+</section>
+
+<footer>
+  <p>2025 - Tugas PJJ Progdas</p>
+</footer>
+
+<script>
+  function scrollLeft() {
+    document.querySelector('.project-slider-container').scrollBy({
+      left: -300,
+      behavior: 'smooth'
+    });
+  }
+
+  function scrollRight() {
+    document.querySelector('.project-slider-container').scrollBy({
+      left: 300,
+      behavior: 'smooth'
+    });
+  }
+</script>
+</body>
+</html>
+
 </body>
 </html>
